- changed wrong username

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 name: DoubleSlider
-author: Matthias Goebels
+author: medienpark
 category: Interface
 tags: [animation, slide, drag]
 docs: http://moo.medienpark.net/DoubleSlider/docs.html
