--- a/package.yml
+++ b/package.yml
@@ -4,4 +4,5 @@ category: Interface
 tags: [animation, slide, drag]
 docs: http://moo.medienpark.net/DoubleSlider/docs.html
 demo: http://moo.medienpark.net/DoubleSlider/demo.html
+originaldemo: http://mootools.net/shell/B7UKd/15/embedded/result,js,resources,html,css/
 current: 0.1
