Changed the author in the package.yml

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 name: DoubleSlider
-author: medienpark
+author: frixxx
 category: Interface
 tags: [animation, slide, drag]
 docs: http://moo.medienpark.net/DoubleSlider/docs.html
