--- a/package.yml
+++ b/package.yml
@@ -2,7 +2,6 @@ name: DoubleSlider
 author: frixxx
 category: Interface
 tags: [animation, slide, drag]
-docs: http://moo.medienpark.net/DoubleSlider/docs.html
-demo: http://moo.medienpark.net/DoubleSlider/demo.html
-originaldemo: http://mootools.net/shell/B7UKd/15/embedded/result,js,resources,html,css/
-current: 0.1
+docs: http://js.frixxx.de.fx/projects/DoubleSlider/#documentation
+demo: http://jsfiddle.net/t9Kpz/1/embedded/result/
+current: 0.2
