- After seeing it on the forge i found some text mistakes. fixed them.

--- a/package.yml
+++ b/package.yml
@@ -2,6 +2,6 @@ name: DoubleSlider
 author: frixxx
 category: Interface
 tags: [animation, slide, drag]
-docs: http://js.frixxx.de.fx/projects/DoubleSlider/#documentation
+docs: http://js.frixxx.de/projects/DoubleSlider/#documentation
 demo: http://jsfiddle.net/frixxx/r326k/embedded/result/
 current: "0.2"
